crates/rspack_error/tests/fixtures/js_resolved_error/fixture.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: _stats.emit_error_string().unwrap()
---
error: Resolve error
  ┌─ /Users/bytedance/Documents/rspack/rspack/crates/rspack_error/tests/fixtures/js_resolved_error/index.js:2:1
  │
2 │ import './result.svg'
  │ ^^^^^^^^^^^^^^^^^^^^^ Failed to resolve ./result.svg


